# connect_four

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  all-requirements.txt  pyproject.toml  requirements.txt  setup.py
connect_four/: __init__.py  connect_four.py  errors.py  logger.py  main.py  piece.py  utils.py
scripts/: c4
tests/: test_connect_four.py
