[project]
name = 'connect_four'
version = '0.1.0'
description = 'This Connect Four game has a very simple AI and CLI which allows humans to play against each other or against the AI.'
readme = 'README.md'
authors = [{ name = 'Tyler BoddySpargo', email = 'muyleche@gmail.com' }]
maintainers = [{ name = 'Tyler BoddySpargo', email = 'muyleche@gmail.com' }]
license = { file = 'LICENSE' }
keywords = ['connect four', 'game', 'cli', 'boddyspargo']
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Topic :: Games/Entertainment :: Puzzle Games',
]
requires-python = '>=3.9'
dependencies = ["codetiming"]


[project.optional-dependencies]
dev = ["black", "pycodestyle", "pydocstyle", "pylint"]
test = ["pytest"]


[project.scripts]
c4 = 'connect_four.scripts.c4:main'
test = 'connect_four.main:main'

[project.urls]
homepage = 'https://github.com/tboddyspargo/connect_four_py'
repository = 'https://github.com/tboddyspargo/connect_four_py.git'

[build-system]
requires = ["setuptools>=42", "wheel", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"

# NOTE: pycodestyle doesn't actually support configuration via pyproject.toml yet... See .vscode/settings.json
[tool.pycodestyle]
max-line-length = 120
statistics = true

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | build
  | dist
  | \w+.egg-info
  | env
  | venv
)/
'''
