[project]
name = 'connect_four'
version = '0.1.0'
description = 'This Connect Four game has a very simple AI and CLI which allows humans to play against each other or against the AI.'
readme = 'README.md'
authors = [{ name = 'Tyler BoddySpargo', email = 'muyleche@gmail.com' }]
maintainers = [{ name = 'Tyler BoddySpargo', email = 'muyleche@gmail.com' }]
license = { file = 'LICENSE' }
keywords = ['connect four', 'game', 'cli', 'boddyspargo']
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Games/Entertainment :: Puzzle Games',
]
requires-python = '>=3.9'
dependencies = ["codetiming"]


[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]


[project.scripts]
c4 = 'connect_four.scripts.c4:main'
test = 'connect_four.main:main'

[project.urls]
homepage = 'https://github.com/tboddyspargo/connect_four_py'
repository = 'https://github.com/tboddyspargo/connect_four_py.git'

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 120
extend-exclude = ["build", "dist", "*.egg-info", "*venv*"]
ignore = [
    'W191',
    'E111',
    'E114',
    'E117',
    'D206',
    'D300',
    'Q000',
    'Q001',
    'Q002',
    'Q003',
    'COM812',
    'COM819',
    'ISC001',
    'ISC002',
]
